fix animation z-index again

--- a/backend/app/static/styles/dice.css
+++ b/backend/app/static/styles/dice.css
@@ -131,7 +131,6 @@ body {
 }
 #player_table {
   width: auto;
-  position: relative;
 }
 #player_table th {
   vertical-align: middle;
